instances.tf
# private ec2
resource "aws_instance" "private" {
    ami = data.aws_ami.amazon_linux.id
    instance_type = var.instance_type
    subnet_id = aws_subnet.private.id
    availability_zone = "${data.aws_region.current.name}a"
    vpc_security_group_ids = [aws_security_group.ssh.id]
    key_name = "ssh-key"
    tags = merge(
        local.common_tags,
        tomap({ "Name" = "${local.prefix}-private-ec2"})
    )
}

# public ec2
resource "aws_instance" "public" {
    ami = data.aws_ami.amazon_linux.id
    instance_type = var.instance_type
    vpc_security_group_ids = [aws_security_group.ssh.id]
    key_name = "ssh-key"
    availability_zone = "${data.aws_region.current.name}a"
    tags = merge(
        local.common_tags,
        tomap({ "Name" = "${local.prefix}-public-ec2"})
    )
}
